syntax = "proto3";
package element.v1;

service ElementSigner {
  rpc SignDigest(SignDigestRequest) returns (SignDigestResponse);
}

message SignDigestRequest {
  string key_id = 1;
  bytes digest = 2; // 32 bytes
  bytes context_binding = 3; // 32 bytes
  uint64 nonce = 4;
}

message SignDigestResponse {
  bytes signature = 1;
  string alg = 2;
  uint64 counter = 3;
}
